--- a/sections/appconstraints.tex
+++ b/sections/appconstraints.tex
@@ -26,28 +26,34 @@ to find concrete parameters that allow for instantiating Chipmunk based on a har
 We have used a fixed ring dimension $n = 512$.
 A selection of possible parameter choices is given in Table~\ref{tab:param}.
 
-% ┌──────────┬───────┬────────┬───────────┬───────────┬───────┬───────────┬───────┬─────────┬──────────────┬──────────┬───────┬────────────┬─────────┬────────┐
-% │   secpar │   tau │    rho │ epsilon   │   alpha_w │   chi │   alpha_H │   phi │   gamma │   beta_sigma │       q' │   eta │   beta_agg │       q │ size   │
-% ├──────────┼───────┼────────┼───────────┼───────────┼───────┼───────────┼───────┼─────────┼──────────────┼──────────┼───────┼────────────┼─────────┼────────┤
-% │      112 │    21 │   1024 │ 1/65536   │        16 │    11 │        37 │    13 │       6 │       775143 │  3168257 │    29 │      25133 │  202753 │ 120 KB │
-% │      112 │    21 │   8192 │ 1/65536   │        16 │    11 │        37 │    16 │       6 │      2698381 │ 10872833 │    49 │     120108 │  962561 │ 135 KB │
-% │      112 │    21 │ 131072 │ 1/65536   │        16 │    11 │        37 │    13 │       7 │      8803786 │ 35301377 │    99 │     970665 │ 7790593 │ 158 KB │
-% │      112 │    24 │   1024 │ 1/65536   │        16 │    11 │        37 │    13 │       6 │       775143 │  3168257 │    29 │      25202 │  202753 │ 135 KB │
-% │      112 │    24 │   8192 │ 1/65536   │        16 │    11 │        37 │    16 │       6 │      2698381 │ 10872833 │    49 │     120438 │  964609 │ 152 KB │
-% │      112 │    24 │ 131072 │ 1/65536   │        16 │    11 │        37 │    13 │       7 │      8803786 │ 35301377 │    99 │     973331 │ 7790593 │ 178 KB │
-% │      112 │    26 │   1024 │ 1/65536   │        16 │    11 │        37 │    13 │       6 │       775143 │  3168257 │    29 │      25243 │  202753 │ 145 KB │
-% │      112 │    26 │   8192 │ 1/65536   │        16 │    11 │        37 │    16 │       6 │      2698381 │ 10872833 │    50 │     123098 │  995329 │ 163 KB │
-% │      112 │    26 │ 131072 │ 1/65536   │        16 │    11 │        37 │    13 │       7 │      8803786 │ 35301377 │    99 │     974934 │ 7806977 │ 191 KB │
-% │      128 │    21 │   1024 │ 1/65536   │        19 │    13 │        44 │     9 │       7 │       698123 │  2856961 │    31 │      29276 │  249857 │ 121 KB │
-% │      128 │    21 │   8192 │ 1/65536   │        19 │    13 │        44 │     8 │       8 │      1761048 │  7114753 │    12 │      32252 │  270337 │ 167 KB │
-% │      128 │    21 │ 131072 │ 1/65536   │        19 │    13 │        44 │     9 │       8 │      7924716 │ 31776769 │    17 │     182757 │ 1492993 │ 197 KB │
-% │      128 │    24 │   1024 │ 1/65536   │        19 │    13 │        44 │     9 │       7 │       698123 │  2856961 │    31 │      29357 │  249857 │ 136 KB │
-% │      128 │    24 │   8192 │ 1/65536   │        19 │    13 │        44 │     8 │       8 │      1761048 │  7114753 │    12 │      32339 │  270337 │ 188 KB │
-% │      128 │    24 │ 131072 │ 1/65536   │        19 │    13 │        44 │     9 │       8 │      7924716 │ 31776769 │    17 │     183255 │ 1492993 │ 222 KB │
-% │      128 │    26 │   1024 │ 1/65536   │        19 │    13 │        44 │     9 │       7 │       698123 │  2856961 │    31 │      29405 │  249857 │ 146 KB │
-% │      128 │    26 │   8192 │ 1/65536   │        19 │    13 │        44 │     8 │       8 │      1761048 │  7114753 │    12 │      32392 │  270337 │ 202 KB │
-% │      128 │    26 │ 131072 │ 1/65536   │        19 │    13 │        44 │     9 │       8 │      7924716 │ 31776769 │    17 │     183554 │ 1492993 │ 239 KB │
-% └──────────┴───────┴────────┴───────────┴───────────┴───────┴───────────┴───────┴─────────┴──────────────┴──────────┴───────┴────────────┴─────────┴────────┘
+% ┌──────────┬───────┬────────┬───────────┬───────────┬───────┬───────────┬───────┬─────────┬──────────────┬──────────┬───────┬────────────┬──────────┬────────┐
+% &   secpar &   tau &    rho & epsilon   &   alpha_w &   chi &   alpha_H &   phi &   gamma &   beta_sigma &       q' &   eta &   beta_agg &        q & size   &
+% ├──────────┼───────┼────────┼───────────┼───────────┼───────┼───────────┼───────┼─────────┼──────────────┼──────────┼───────┼────────────┼──────────┼────────┤
+% &      112 &    21 &   1024  &        16 &    12 &        37 &    13 &       6 &       761464 &  3115009 &    73 &      62279 &   514049 & 92 KB  &
+% &      112 &    21 &   8192  &        16 &    12 &        37 &    16 &       6 &      2650762 & 10684417 &   110 &     265431 &  2123777 & 109 KB &
+% &      112 &    21 & 131072  &        16 &    12 &        37 &    13 &       7 &      8649632 & 34676737 &   163 &    1573282 & 12587009 & 128 KB &
+% &      112 &    23 &   1024  &        16 &    12 &        37 &    13 &       6 &       761464 &  3115009 &    73 &      62401 &   514049 & 99 KB  &
+% &      112 &    23 &   8192  &        16 &    12 &        37 &    16 &       6 &      2650762 & 10684417 &   110 &     265951 &  2148353 & 118 KB &
+% &      112 &    23 & 131072  &        16 &    12 &        37 &    13 &       7 &      8649632 & 34676737 &   163 &    1576360 & 12623873 & 138 KB &
+% &      112 &    24 &   1024  &        16 &    12 &        37 &    13 &       6 &       761464 &  3115009 &    73 &      62458 &   514049 & 103 KB &
+% &      112 &    24 &   8192  &        16 &    12 &        37 &    16 &       6 &      2650762 & 10684417 &   110 &     266194 &  2148353 & 123 KB &
+% &      112 &    24 & 131072  &        16 &    12 &        37 &    13 &       7 &      8649632 & 34676737 &   163 &    1577802 & 12623873 & 144 KB &
+% &      112 &    26 &   1024  &        16 &    12 &        37 &    13 &       6 &       761464 &  3115009 &    73 &      62565 &   514049 & 110 KB &
+% &      112 &    26 &   8192  &        16 &    12 &        37 &    16 &       6 &      2650762 & 10684417 &   110 &     266652 &  2148353 & 132 KB &
+% &      112 &    26 & 131072  &        16 &    12 &        37 &    13 &       7 &      8649632 & 34676737 &   163 &    1580518 & 12644353 & 154 KB &
+% &      128 &    21 &   1024  &        19 &    14 &        44 &     9 &       7 &       685898 &  2836481 &    71 &      66007 &   534529 & 93 KB  &
+% &      128 &    21 &   8192  &        19 &    14 &        44 &     8 &       8 &      1730419 &  7026689 &    26 &      68809 &   557057 & 144 KB &
+% &      128 &    21 & 131072  &        19 &    14 &        44 &     9 &       8 &      7786884 & 31221761 &    37 &     391681 &  3168257 & 167 KB &
+% &      128 &    23 &   1024  &        19 &    14 &        44 &     9 &       7 &       685898 &  2836481 &    71 &      66136 &   534529 & 100 KB &
+% &      128 &    23 &   8192  &        19 &    14 &        44 &     8 &       8 &      1730419 &  7026689 &    26 &      68942 &   557057 & 156 KB &
+% &      128 &    23 & 131072  &        19 &    14 &        44 &     9 &       8 &      7786884 & 31221761 &    37 &     392437 &  3168257 & 181 KB &
+% &      128 &    24 &   1024  &        19 &    14 &        44 &     9 &       7 &       685898 &  2836481 &    71 &      66197 &   534529 & 104 KB &
+% &      128 &    24 &   8192  &        19 &    14 &        44 &     8 &       8 &      1730419 &  7026689 &    26 &      69004 &   557057 & 162 KB &
+% &      128 &    24 & 131072  &        19 &    14 &        44 &     9 &       8 &      7786884 & 31221761 &    37 &     392792 &  3168257 & 188 KB &
+% &      128 &    26 &   1024  &        19 &    14 &        44 &     9 &       7 &       685898 &  2836481 &    71 &      66311 &   534529 & 112 KB &
+% &      128 &    26 &   8192  &        19 &    14 &        44 &     8 &       8 &      1730419 &  7026689 &    26 &      69122 &   557057 & 174 KB &
+% &      128 &    26 & 131072  &        19 &    14 &        44 &     9 &       8 &      7786884 & 31221761 &    37 &     393459 &  3168257 & 202 KB &
+% └──────────┴───────┴────────┴───────────┴───────────┴───────┴───────────┴───────┴─────────┴──────────────┴──────────┴───────┴────────────┴──────────┴────────┘
 
 \bgroup
 \setlength{\tabcolsep}{0.5em}
@@ -70,29 +76,54 @@ A selection of possible parameter choices is given in Table~\ref{tab:param}.
   
   
       % &       &        &            &  &  \multicolumn{4}{c||}{HVC}  &  & \multicolumn{2}{c||}{KOTS}  & (Kilobytes) \\\hline\hline
-      &       &   1024 &         16 &        11 &        37 &         13 &       6 &        775,143 &  3,168,257 &    29 &       25,133 &   202,753 & 120 \\%\cline{3-13}
-      &    21 &   8192 &         16 &        11 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    49 &      120,108 &   962,561 & 135 \\%\cline{3-13}
-      &       & 131072 &         16 &        11 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &    99 &      970,665 & 7,790,593 & 158 \\\cline{2-14}
+
+          &       &   1024  &        16 &    12 &        37 &    13 &       6 &        761,464 &  3,115,009 &    73 &       62,279 &    514,049 & 92 KB  \\
+          &    21 &   8192  &        16 &    12 &        37 &    16 &       6 &      2,650,762 & 10,684,417 &   110 &      265,431 &  2,123,777 & 109 KB \\
+          &       & 131072  &        16 &    12 &        37 &    13 &       7 &      8,649,632 & 34,676,737 &   163 &    1,573,282 & 12,587,009 & 128 KB \\\cline{2-14}
+
+          &       &   1024  &        16 &    12 &        37 &    13 &       6 &        761,464 &  3,115,009 &    73 &       62,458 &    514,049 & 103 KB \\
+      112 &    24 &   8192  &        16 &    12 &        37 &    16 &       6 &      2,650,762 & 10,684,417 &   110 &      266,194 &  2,148,353 & 123 KB \\
+          &       & 131072  &        16 &    12 &        37 &    13 &       7 &      8,649,632 & 34,676,737 &   163 &    1,577,802 & 12,623,873 & 144 KB \\\cline{2-14}
+
+          &       &   1024  &        16 &    12 &        37 &    13 &       6 &        761,464 &  3,115,009 &    73 &       62,565 &    514,049 & 110 KB \\
+          &    26 &   8192  &        16 &    12 &        37 &    16 &       6 &      2,650,762 & 10,684,417 &   110 &      266,652 &  2,148,353 & 132 KB \\
+          &       & 131072  &        16 &    12 &        37 &    13 &       7 &      8,649,632 & 34,676,737 &   163 &    1,580,518 & 12,644,353 & 154 KB \\\midrule
+
+          &       &   1024  &        19 &    14 &        44 &     9 &       7 &        685,898 &  2,836,481 &    71 &       66,007 &    534,529 & 93 KB  \\
+          &    21 &   8192  &        19 &    14 &        44 &     8 &       8 &      1,730,419 &  7,026,689 &    26 &       68,809 &    557,057 & 144 KB \\
+          &       & 131072  &        19 &    14 &        44 &     9 &       8 &      7,786,884 & 31,221,761 &    37 &      391,681 &  3,168,257 & 167 KB \\\cline{2-14}
+
+          &       &   1024  &        19 &    14 &        44 &     9 &       7 &        685,898 &  2,836,481 &    71 &       66,197 &    534,529 & 104 KB \\
+      128 &    24 &   8192  &        19 &    14 &        44 &     8 &       8 &      1,730,419 &  7,026,689 &    26 &       69,004 &    557,057 & 162 KB \\
+          &       & 131072  &        19 &    14 &        44 &     9 &       8 &      7,786,884 & 31,221,761 &    37 &      392,792 &  3,168,257 & 188 KB \\\cline{2-14}
+
+          &       &   1024  &        19 &    14 &        44 &     9 &       7 &        685,898 &  2,836,481 &    71 &       66,311 &    534,529 & 112 KB \\
+          &    26 &   8192  &        19 &    14 &        44 &     8 &       8 &      1,730,419 &  7,026,689 &    26 &       69,122 &    557,057 & 174 KB \\
+          &       & 131072  &        19 &    14 &        44 &     9 &       8 &      7,786,884 & 31,221,761 &    37 &      393,459 &  3,168,257 & 202 KB \\\bottomrule
+
+  %     &       &   1024 &         16 &        12 &        37 &         13 &       6 &        761464 &  3115009 &    73 &       62279 &   202,753 & 120 \\%\cline{3-13}
+  %     &    21 &   8192 &         16 &        12 &        37 &         16 &       6 &      2650762 & 10684417 &    110 &      265431 &   962,561 & 135 \\%\cline{3-13}
+  %     &       & 131072 &         16 &        12 &        37 &         13 &       7 &      8649632 & 34676737 &    163 &      1573282 & 7,790,593 & 158 \\\cline{2-14}
   
-      &       &   1024 &         16 &        11 &        37 &         13 &       6 &        775,143 &  3,168,257 &    29 &       25,202 &   202,753 & 135 \\%\cline{3-13}
-  112 &    24 &   8192 &         16 &        11 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    49 &      120,438 &   964,609 & 152 \\%\cline{3-13}
-      &       & 131072 &         16 &        11 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &    99 &      973,331 & 7,790,593 & 178 \\\cline{2-14}
+  %     &       &   1024 &         16 &        12 &        37 &         13 &       6 &        761464 &  3115009 &    73 &       62458 &   202,753 & 135 \\%\cline{3-13}
+  % 112 &    24 &   8192 &         16 &        12 &        37 &         16 &       6 &      2650762 & 10684417 &    110 &      266194 &   964,609 & 152 \\%\cline{3-13}
+  %     &       & 131072 &         16 &        12 &        37 &         13 &       7 &      8649632 & 34676737 &    163 &     1577802 & 7,790,593 & 178 \\\cline{2-14}
   
-      &       &   1024 &         16 &        11 &        37 &         13 &       6 &        775,143 &  3,168,257 &    29 &       25,243 &   202,753 & 145 \\%\cline{3-13}
-      &    26 &   8192 &         16 &        11 &        37 &         16 &       6 &      2,698,381 & 10,872,833 &    50 &      123,098 &   995,329 & 163 \\%\cline{3-13}
-      &       & 131072 &         16 &        11 &        37 &         13 &       7 &      8,803,786 & 35,301,377 &    99 &      974,934 & 7,806,977 & 191 \\\midrule
+  %     &       &   1024 &         16 &        12 &        37 &         13 &       6 &        761464 &  3115009 &    73 &       62565 &   202,753 & 145 \\%\cline{3-13}
+  %     &    26 &   8192 &         16 &        12 &        37 &         16 &       6 &      2650762 & 10684417 &    110 &      266652 &   995,329 & 163 \\%\cline{3-13}
+  %     &       & 131072 &         16 &        12 &        37 &         13 &       7 &      8649632 & 34676737 &    163 &     1580518 & 7,806,977 & 191 \\\midrule
   
-      &       &   1024 &         19 &        13 &        44 &          9 &       7 &        698,123 &  2,856,961 &    31 &       29,276 &   249,857 & 121 \\%\cline{3-13}
-      &    21 &   8192 &         19 &        13 &       44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,252 &   270,337 & 167 \\%\cline{3-13}
-      &       & 131072 &         19 &        13 &       44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      182,757 & 1,492,993 & 197 \\\cline{2-14}
+  %     &       &   1024 &         19 &        14 &        44 &          9 &       7 &        685898 &  2836481 &    71 &      66007 &   249,857 & 121 \\%\cline{3-13}
+  %     &    21 &   8192 &         19 &        14 &       44 &          8 &       8 &      1730419 &  7026689 &    26 &       68809 &   270,337 & 167 \\%\cline{3-13}
+  %     &       & 131072 &         19 &        14 &       44 &          9 &       8 &      7786884 & 31221761 &    37 &     391681 & 1,492,993 & 197 \\\cline{2-14}
   
-      &       &   1024 &         19 &        13 &       44 &          9 &       7 &        698,123 &  2,856,961 &    31 &       29,357 &   249,857 & 136 \\%\cline{3-13}
-  128 &    24 &   8192 &         19 &        13 &       44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,339 &   270,337 & 188 \\%\cline{3-13}
-      &       & 131072 &         19 &        13 &       44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      183,255 & 1,492,993 & 222 \\\cline{2-14}
+  %     &       &   1024 &         19 &        14 &       44 &          9 &       7 &        685898 &  2836481 &    71 &       66197 &   249,857 & 136 \\%\cline{3-13}
+  % 128 &    24 &   8192 &         19 &        14 &       44 &          8 &       8 &      1730419 &  7026689 &    26 &       69004 &   270,337 & 188 \\%\cline{3-13}
+  %     &       & 131072 &         19 &        14 &       44 &          9 &       8 &      7786884 & 31221761 &    37 &      392792 & 1,492,993 & 222 \\\cline{2-14}
   
-      &       &   1024 &         19 &        13 &       44 &          9 &       7 &        698,123 &  2,856,961 &    31 &       29,405 &   249,857 & 146 \\%\cline{3-13}
-      &    26 &   8192 &         19 &        13 &       44 &          8 &       8 &      1,761,048 &  7,114,753 &    12 &       32,392 &   270,337 & 202 \\%\cline{3-13}
-      &       & 131072 &         19 &        13 &       44 &          9 &       8 &      7,924,716 & 31,776,769 &    17 &      183,554 & 1,492,993 & 239 \\\bottomrule
+  %     &       &   1024 &         19 &        14 &       44 &          9 &       7 &        685898 &  2836481 &    71 &       66311 &   249,857 & 146 \\%\cline{3-13}
+  %     &    26 &   8192 &         19 &        14 &       44 &          8 &       8 &      1730419 &  7026689 &    26 &       69122 &   270,337 & 202 \\%\cline{3-13}
+  %     &       & 131072 &         19 &        14 &       44 &          9 &       8 &      7786884 & 31221761 &    37 &     3934594 & 1,492,993 & 239 \\\bottomrule
     \end{tabular}
     \caption{Parameter sets for Chipmunk for a fixed ring dimension $n=512$.}\label{tab:param}
   \end{table}
