--- a/sections/prelim.tex
+++ b/sections/prelim.tex
@@ -161,6 +161,7 @@ Our concrete constructions depends on a significant number of tunable parameters
 %                & When constructing the synchronized multi-signatures, $\xi = 2\otspkkeylen$.\\
  $\bagg$ & Norm bound for HVC\eprint{s} after aggregation/homomorphic addition.\\
  $\beta_\sigma$ & Norm bound for KOTS signatures after aggregation/homomorphic addition.\\
+ \cameraready{$\beta_{\texttt{encode}}$} & \cameraready{Norm bound for the $\alpha$-s in an encoded randomized path.}\\
  $\alpha_w$ & Hamming weight for ring elements used as coefficients for homomorphic addition of our HVC\eprint{s} or KOTS.\\
  $\alpha_H$ & Hamming weight for ring elements used as randomizers in the construction of individual KOTS signatures.\\
  $\varphi$ & Norm bound parameter for secret keys of the KOTS.\\
