Add comment for Zhenfei.

--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -57,6 +57,7 @@ For keys that can generate $2^{24}$ signatures, an individual Chipmunk signature
 % TODO
 \gnote{Correct statement about performance metrics here, factor by which sizes are smaller are wrong in one the versions.}
 }
+\gnote{@Zhenfei: I think the versions are flipped}
 %The gap between Chipmunk's and Squirrel's performance increases with an increasing bound on the number of signatures that should issuable with a single key.
 %One of Squirrel's main computational bottlenecks was key generation as generating keys that support $2^{21}$ and $2^{26}$ signatures took $4$ minutes and $2$ hours.
 %Chipmunk's key generation times are smaller for these parameters by factors of $9 \times$ and $30 \times$.
