--- a/main.tex
+++ b/main.tex
@@ -127,9 +127,9 @@ The construction is plausibly secure against quantum adversaries as our security
 
 We significantly improve upon the previously best known construction in this setting by Fleischhacker, Simkin, and Zhang (CCS 2022).
 \cameraready{
-Our aggregate signature size is $7 \times$ smaller and for $112$ bits of security our construction allows for compressing 8192 individual signatures into a multi-signature of size of $109$ KB.}
+Our aggregate signature size is $5 \times$ smaller and for $112$ bits of security our construction allows for compressing 8192 individual signatures into a multi-signature of size less than $200$ KB.}
 \eprint{
-Our aggregate signature size is $5 \times$ smaller and for $112$ bits of security our construction allows for compressing 8192 individual signatures into a multi-signature of size around $135$ KB.
+Our aggregate signature size is $7 \times$ smaller and for $112$ bits of security our construction allows for compressing 8192 individual signatures into a multi-signature of size around $109$ KB.
 \gnote{Check}
 }
 We provide a full implementation of Chipmunk and provide extensive benchmarks studying our construction's efficiency.
