--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -48,16 +48,16 @@ We strengthen their security definitions to formally ensure that successfully ve
 On the practical side, our scheme Chipmunk produces smaller individual and aggregated signatures, when compared to Squirrel.
 In terms of computational efficiency metrics, Chipmunk either significantly outperforms Squirrel or remains comparable in speed.
 \cameraready{
-In terms of bandwidth, Chipmunk's aggregate signatures are smaller by a factor of $7\times$, when compared to Squirrel.
-For keys that can generate $2^{24}$ signatures, an individual Chipmunk signatures is $37$ KB and aggregating $8192$ signatures results in an aggregate signature that is $123$ KB large. %\gnote{@Zhenfei:Double-Check}
+In terms of bandwidth, Chipmunk's aggregate signatures are smaller by a factor of $4.8\times$, when compared to Squirrel.
+For keys that can generate $2^{24}$ signatures, an individual Chipmunk signatures is $37$ KB and aggregating $8192$ signatures results in an aggregate signature that is $180$ KB large. %\gnote{@Zhenfei:Double-Check}
 }
 \eprint{
-In terms of bandwidth, Chipmunk's aggregate signatures are smaller by a factor of $4.8\times$, when compared to Squirrel.
-For keys that can generate $2^{24}$ signatures, an individual Chipmunk signatures is $37$ KB and aggregating $8192$ signatures results in an aggregate signature that is $135$ KB large. %\gnote{@Zhenfei:Double-Check}
+In terms of bandwidth, Chipmunk's aggregate signatures are smaller by a factor of $7\times$, when compared to Squirrel.
+For keys that can generate $2^{24}$ signatures, an individual Chipmunk signatures is $37$ KB and aggregating $8192$ signatures results in an aggregate signature that is $123$ KB large. %\gnote{@Zhenfei:Double-Check}
 % TODO
 \gnote{Correct statement about performance metrics here, factor by which sizes are smaller are wrong in one the versions.}
 }
-\gnote{@Zhenfei: I think the versions are flipped}
+% \gnote{@Zhenfei: I think the versions are flipped}
 %The gap between Chipmunk's and Squirrel's performance increases with an increasing bound on the number of signatures that should issuable with a single key.
 %One of Squirrel's main computational bottlenecks was key generation as generating keys that support $2^{21}$ and $2^{26}$ signatures took $4$ minutes and $2$ hours.
 %Chipmunk's key generation times are smaller for these parameters by factors of $9 \times$ and $30 \times$.
